# mp2

./: .gitignore  Cargo.toml  Makefile  README.md  a.out  array  array.cpp  deploy.sh  gamestate.cpp  generate_wasm.sh  globals.cpp  gobang  jsconfig.json  library.cpp  main.cpp  matrix.cpp  test  test.cpp  testing  testing.cpp  vetur.config.js
ai/: a.out  cnn.cpp  funcs.cpp  pvnet.cpp  tensor.cpp
apps/: Cargo.toml
core/: Cargo.toml
core/src/: bot.rs  game.rs  lib.rs  utils.rs
core/src/madam/: head.rs  mcts.rs  network.rs
libs/GENEMIX/: Readme.txt
libs/GENEMIX/program/: loader.bat
libs/GENEMIX/source/: AboutUnit.pas  Genemix.cfg  Genemix.dof  Genemix.dpr  add.dfm  add.pas  genetic.pas  log.dfm  log.pas  main.dfm  main.pas
libs/VISUALHEWER/: readme.cz.txt  readme.en.txt
logic/: baseline.cpp
scripts/: frontend.sh
src/: bot.rs  game.rs  madam.rs  main.rs
src/madam/: head.rs  mcts.rs
terminal/: Cargo.toml
terminal/src/: game.rs  main.rs
tmp/: test.cpp
web/backend/: Cargo.toml
web/backend/src/: lib.rs
web/frontend/: .eslintrc.js  README.md  jsconfig.json  nuxt.config.js  package-lock.json  package.json  tailwind.config.js
web/frontend/components/: Controls.vue  Footer.vue  Grid.vue  Tutorial.vue
web/frontend/pages/: index.vue
web/frontend/plugins/: wasm.js
web/frontend/utils/: enums.js  finished.js
web/frontend/wasm/: core_bg.js  core_bg.wasm
web/server/: Cargo.toml
web/server/src/: frontend.rs  lib.rs
web/wasm/: Cargo.toml
web/wasm/src/: lib.rs
