[package]
name = "wasm"
version = "0.1.0"
edition = "2018"


[dependencies]
core = { path = '../../core' }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

getrandom = { version = "0.2.3", features = ["js"] }
console_error_panic_hook = { version = "0.1.6", optional = true }

bincode = "1.3.3"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
